Don't use Class.newInstance(), as it was deprecated in Java 11